Improved addition existing users to the area

--- a/client/lib/components/organizations/organization_structure/view.html
+++ b/client/lib/components/organizations/organization_structure/view.html
@@ -2,10 +2,16 @@
   <h1>{{state$organization.name}}</h1>
   {{#each state$locations}}
     <ul class="list-group" style="display: block;">
-      <li class="list-group-item lead open-flyout location-settings" style="display: block; cursor: pointer; " data-id="locationSettings">
-        {{name}}
-        <span class="badge"><i class="fa fa-fw fa-cog"></i></span>
-      </li>
+      {{#if state$isOwner}}
+        <li class="list-group-item lead open-flyout location-settings" style="display: block; cursor: pointer; " data-id="locationSettings">
+          {{name}}
+          <span class="badge"><i class="fa fa-fw fa-cog"></i></span>
+        </li>
+      {{else}}
+        <li class="list-group-item lead" style="display: block;">
+          {{name}}
+        </li>
+      {{/if}}
       {{#each state$areas _id}}
         <li class="list-group-item" style="display: block;">
           <a href="#" class="change-current-area {{state$currentArea _id}}">{{name}}</a>
