--- a/client/lib/components/organizations/areas/area_settings/add_user_popup/add_user_popup.html
+++ b/client/lib/components/organizations/areas/area_settings/add_user_popup/add_user_popup.html
@@ -4,25 +4,49 @@
       <b>Users</b>
     </div>
     <div class="panel-body">
-      <form>
-        <input type="text" class="form-control" placeholder="e.g. john@gmail.com" name="add-user-name" />
+      <form class="add-user-to-area-form">
+        <input type="text" class="form-control" placeholder="e.g. john@gmail.com" name="addUserName">
+        <div class="input-group col-xs-12">
+          <input type="text" class="form-control hide" placeholder="Name" name="newUserName" required="required">
+          <span class="input-group-btn hide">
+            <button class="btn btn-primary" type="submit">
+              <i class="fa fa-check"></i>
+            </button>
+          </span>
+        </div>
       </form>
       <br />
+
+      <div class="user-permissions hide">
+        <div class="permission-title">
+          Permission for <b class="permission-for"></b>
+        </div>
+        <hr />
+        {{#each userPermissions}}
+          {{> userPermission}}
+        {{/each}}
+        <br />
+        <div class="btn-group col-xs-12">
+          <button class="btn btn-primary col-xs-6 add-existing-user">Add</button>
+          <button class="btn btn-default col-xs-6 back-to-select-user">Back</button>
+        </div>
+      </div>
+
       <p class="text-muted add-user-info">
         Search for a person in organization by name or email address, or enter an email address to invite someone new.
       </p>
-      <div class="users-search-results">
-        <div class="text-muted text-center no-results">
-          <b>No results</b>
-        </div>
-        <div class="search-result">
-          <b>Select to add</b>
-          <hr />
-          <div class="search-users-container">
-            {{# each searchUsers}}
-              {{> searchUserInfo}}
-            {{/each}}
-          </div>
+
+      <div class="text-muted text-center no-results hide">
+        <b>No results</b>
+      </div>
+
+      <div class="search-result hide">
+        <b>Select to add</b>
+        <hr />
+        <div class="search-users-container">
+          {{# each searchUsers}}
+            {{> searchUserInfo}}
+          {{/each}}
         </div>
       </div>
     </div>
