--- a/client/lib/components/organizations/areas/area_settings/view.html
+++ b/client/lib/components/organizations/areas/area_settings/view.html
@@ -1,16 +1,31 @@
 <template name="areaSettings">
-  <h1 class="area-name" style="display: inline-block;" data-id="{{state$area._id}}" data-display="false">{{state$area.name}}</h1>
+  {{#if state$isOwner}}
+    <h1 class="area-name" style="display: inline-block;" data-id="{{state$area._id}}" data-display="false">{{state$area.name}}</h1>
+  {{else}}
+    <h1 style="display: inline-block;" data-id="{{state$area._id}}">{{state$area.name}}</h1>
+  {{/if}}
 
   <div class="area-users">
     {{#each state$areaUsers}}
-      <img src="{{state$getProfilePhoto _id}}" alt="Profile photo of {{username}}" class="user-photo-min" title="{{username}}" />
+      <div class="user-profile-image-container">
+        {{#if state$isOwner}}
+          {{#unless state$isMe _id}}
+            <i class="fa fa-times remove-user-from-area"></i>
+          {{/unless}}
+        {{/if}}
+        <a href="/user/profile/{{_id}}">
+          <img src="{{state$getProfilePhoto _id}}" alt="Profile photo of {{this.username}}" class="user-photo-min" title="{{this.username}}" />
+        </a>
+      </div>
     {{/each}}
   </div>
 
-  <button class="btn btn-white col-xs-12 add-user" data-id="{{state$area._id}}">
-    <i class="fa fa-user-plus"></i>  Add User
-  </button>
-  <br />
-  {{> addUserPopup}}
-  <button class="btn btn-danger col-xs-12 delete-area" data-id="{{state$area._id}}">Delete Area</button>
+  {{#if state$isOwner}}
+    <button class="btn btn-white col-xs-12 add-user" data-id="{{state$area._id}}">
+      <i class="fa fa-user-plus"></i>  Add User
+    </button>
+    <br />
+    {{> addUserPopup}}
+    <button class="btn btn-danger col-xs-12 delete-area" data-id="{{state$area._id}}">Delete Area</button>
+  {{/if}}
 </template>
