--- a/client/lib/components/organizations/areas/area_settings/add_user_popup/add_user_popup.html
+++ b/client/lib/components/organizations/areas/area_settings/add_user_popup/add_user_popup.html
@@ -6,9 +6,9 @@
     <div class="panel-body">
       <form class="add-user-to-area-form">
         <input type="text" class="form-control" placeholder="e.g. john@gmail.com" name="addUserName">
-        <div class="input-group col-xs-12">
-          <input type="text" class="form-control hide" placeholder="Name" name="newUserName" required="required">
-          <span class="input-group-btn hide">
+        <div class="input-group col-xs-12 hide">
+          <input type="text" class="form-control" placeholder="Name" name="newUserName">
+          <span class="input-group-btn">
             <button class="btn btn-primary" type="submit">
               <i class="fa fa-check"></i>
             </button>
@@ -34,6 +34,11 @@
 
       <p class="text-muted add-user-info">
         Search for a person in organization by name or email address, or enter an email address to invite someone new.
+      </p>
+
+      <p class="text-info text-center add-user-by-email-success hide">
+        The user was notified
+        <button class="btn btn-default col-xs-12 back-to-select-user">Back</button>
       </p>
 
       <div class="text-muted text-center no-results hide">
