Refactored some flyouts

--- a/client/lib/components/general_flyout/view.html
+++ b/client/lib/components/general_flyout/view.html
@@ -4,7 +4,7 @@
       <div class="skin-setttings">
         <div class="white-notify-bg">
           <div class="title clearfix">
-            <a href="" class="theme-config-close-btn" data-id="{{state$component}}">
+            <a href="#" class="theme-config-close-btn" data-id="{{state$component}}">
               <i class="fa fa-angle-right"></i>
             </a>
             {{{state$title}}}
