--- a/client/lib/components/navigations/top/flyouts/view.html
+++ b/client/lib/components/navigations/top/flyouts/view.html
@@ -1,15 +1,15 @@
 <template name="flyouts">
-  {{> render component="generalFlyout" title=state$profileName renderComponent="profileFlyoutLinks"}}
-  {{> render component="generalFlyout" title="My Profile" renderComponent="profileFlyout"}}
-  {{> render component="generalFlyout" title="Create Organization" renderComponent="createOrganizationPage"}}
+  <!--{{> render component="generalFlyout" title=state$profileName renderComponent="profileFlyoutLinks"}}-->
+  <!--{{> render component="generalFlyout" title="My Profile" renderComponent="profileFlyout"}}-->
+  <!--{{> render component="generalFlyout" title="Create Organization" renderComponent="createOrganizationPage"}}-->
 
   {{#if state$isInOrganization}}
-    {{> render component="generalFlyout" title=state$organizationTitle renderComponent="organizationStructure"}}
-    {{> render component="generalFlyout" title="Organization Settings" renderComponent="organizationDetailsPage"}}
-    {{> render component="generalFlyout" title="Change billing account" renderComponent="changeBillingAccount"}}
-    {{> render component="generalFlyout" title="Add Location" renderComponent="createLocation"}}
-    {{> render component="generalFlyout" title="Add Area" renderComponent="createArea"}}
-    {{> render component="generalFlyout" title="Location Settings" renderComponent="locationSettings"}}
+    <!--{{> render component="generalFlyout" title=state$organizationTitle renderComponent="organizationStructure"}}-->
+    <!--{{> render component="generalFlyout" title="Organization Settings" renderComponent="organizationDetailsPage"}}-->
+    <!--{{> render component="generalFlyout" title="Change billing account" renderComponent="changeBillingAccount"}}-->
+    <!--{{> render component="generalFlyout" title="Add Location" renderComponent="createLocation"}}-->
+    <!--{{> render component="generalFlyout" title="Add Area" renderComponent="createArea"}}-->
+    <!--{{> render component="generalFlyout" title="Location Settings" renderComponent="locationSettings"}}-->
     {{> render component="generalFlyout" title="Area Settings" renderComponent="areaSettings"}}
 
     {{#if state$isOrganizationOwner}}
