--- a/client/lib/components/organizations/locations/create_location/view.html
+++ b/client/lib/components/organizations/locations/create_location/view.html
@@ -16,7 +16,7 @@
       <label class="col-sm-2 control-label">Timezone</label>
       <div class="col-sm-10">
         <select class="form-control" name="timezone">
-          {{{state$timezones}}}
+          {{{timezones}}}
         </select>
       </div>
     </div>
@@ -24,12 +24,12 @@
       <label class="col-sm-2 control-label">Opening Time</label>
       <div class="col-sm-4">
         <select name="openingHour" class="form-control">
-          {{{state$openingHours}}}
+          {{{hours 8}}}
         </select>
       </div>
       <div class="col-sm-4">
         <select name="openingMinutes" class="form-control">
-          {{{state$minutes}}}
+          {{{minutes}}}
         </select>
       </div>
     </div>
@@ -37,12 +37,12 @@
       <label class="col-sm-2 control-label">Closing Time</label>
       <div class="col-sm-4">
         <select name="closingHour" class="form-control">
-          {{{state$closingHours}}}
+          {{{hours 17}}}
         </select>
       </div>
       <div class="col-sm-4">
         <select name="closingMinutes" class="form-control">
-          {{{state$minutes}}}
+          {{{minutes}}}
         </select>
       </div>
     </div>
@@ -50,11 +50,11 @@
       <label class="col-sm-2 control-label">Status</label>
       <div class="col-sm-10 col-xs-12">
         <div class="btn-group col-xs-12" data-toggle="buttons">
-          <label class="btn btn-primary active col-xs-6">
-            <input type="radio" name="status" id="enabled" autocomplete="off" value="Enabled" checked>
+          <label class="btn col-xs-6{{#if state$enabled}} btn-primary{{else}} btn-default{{/if}}">
+            <input type="radio" name="status" id="enabled" autocomplete="off" value="Enabled" checked="checked">
             Enabled
           </label>
-          <label class="btn btn-default col-xs-6">
+          <label class="btn col-xs-6{{#unless state$enabled}} btn-primary{{else}} btn-default{{/unless}}">
             <input type="radio" name="status" id="disabled" autocomplete="off" value="Disabled">
             Disabled
           </label>
