--- a/client/lib/components/organizations/organization_structure/view.html
+++ b/client/lib/components/organizations/organization_structure/view.html
@@ -2,7 +2,7 @@
   <h1>{{state$organization.name}}</h1>
   {{#each state$locations}}
     <ul class="list-group" style="display: block;">
-      {{#if state$isOwner}}
+      {{#if state$isOrganizationOwner}}
         <li class="list-group-item lead open-flyout location-settings" style="display: block; cursor: pointer; "
             data-id="locationSettings">
           {{name}}
@@ -15,7 +15,7 @@
       {{/if}}
       {{#each state$areas _id}}
         <li class="list-group-item" style="display: block;">
-          <a href="#" class="change-current-area {{state$currentArea _id}}">{{name}}</a>
+          <a href="#" class="change-current-area{{#if state$currentArea _id}} active{{/if}}">{{name}}</a>
           <span class="badge open-flyout area-settings" data-id="areaSettings" data-params="id='{{_id}}'"><i
             class="fa fa-fw fa-cog"></i></span>
         </li>
@@ -23,7 +23,7 @@
     </ul>
   {{/each}}
 
-  <!-- Flyout -->
+  <!-- Flyout invitationsList -->
   <div class="theme-config flyout-container" id="invitationsList">
     <div class="theme-config-box">
       <div class="skin-setttings">
@@ -45,5 +45,79 @@
       </div>
     </div>
   </div>
-  <!-- Flyout -->
+  <!-- Flyout invitationsList -->
+
+  <!-- Flyout organizationDetailsPage -->
+  <div class="theme-config flyout-container" id="organizationDetailsPage">
+    <div class="theme-config-box">
+      <div class="skin-setttings">
+        <div class="white-notify-bg">
+          <div class="title clearfix">
+            <a href="#" class="theme-config-close-btn" data-id="organizationDetailsPage">
+              <i class="fa fa-angle-right"></i>
+            </a>
+            Organization Settings
+          </div>
+          <div class="ibox float-e-margins" style="margin-bottom: 0;">
+            <div class="ibox-content" style="padding-bottom: 10px;">
+              <div class="feed-activity-list">
+                {{> render component="organizationDetailsPage" organizationId=state$organization._id}}
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Flyout organizationDetailsPage -->
+
+  {{#if state$isOrganizationOwner}}
+    <!-- Flyout createLocation -->
+    <div class="theme-config flyout-container" id="createLocation">
+      <div class="theme-config-box">
+        <div class="skin-setttings">
+          <div class="white-notify-bg">
+            <div class="title clearfix">
+              <a href="#" class="theme-config-close-btn" data-id="createLocation">
+                <i class="fa fa-angle-right"></i>
+              </a>
+              Add Location
+            </div>
+            <div class="ibox float-e-margins" style="margin-bottom: 0;">
+              <div class="ibox-content" style="padding-bottom: 10px;">
+                <div class="feed-activity-list">
+                  {{> render component="createLocation" organizationId=state$organization._id}}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Flyout createLocation -->
+
+    <!-- Flyout locationSettings -->
+    <div class="theme-config flyout-container" id="locationSettings">
+      <div class="theme-config-box">
+        <div class="skin-setttings">
+          <div class="white-notify-bg">
+            <div class="title clearfix">
+              <a href="#" class="theme-config-close-btn" data-id="locationSettings">
+                <i class="fa fa-angle-right"></i>
+              </a>
+              Location Settings
+            </div>
+            <div class="ibox float-e-margins" style="margin-bottom: 0;">
+              <div class="ibox-content" style="padding-bottom: 10px;">
+                <div class="feed-activity-list">
+                  {{>render component='locationSettings' organizationId=state$organization._id locationId=state$location}}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Flyout locationSettings -->
+  {{/if}}
 </template>
