--- a/client/lib/components/users/profile/profile_flyout/profile_links/view.html
+++ b/client/lib/components/users/profile/profile_flyout/profile_links/view.html
@@ -17,5 +17,28 @@
       </span>
     </a>
   </ul>
-  {{> render component="generalFlyout" title="My Profile" renderComponent="profileFlyout"}}
+
+  <!-- Flyout profileFlyout -->
+  <div class="theme-config flyout-container" id="profileFlyout">
+    <div class="theme-config-box">
+      <div class="skin-setttings">
+        <div class="white-notify-bg">
+          <div class="title clearfix">
+            <a href="#" class="theme-config-close-btn" data-id="profileFlyout">
+              <i class="fa fa-angle-right"></i>
+            </a>
+            My Profile
+          </div>
+          <div class="ibox float-e-margins" style="margin-bottom: 0;">
+            <div class="ibox-content" style="padding-bottom: 10px;">
+              <div class="feed-activity-list">
+                {{>render component='profileFlyout'}}
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Flyout profileFlyout -->
 </template>
