fixed profilr pic uploaded view bugs'

--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -15,7 +15,7 @@
           <li class="nav-header">
             <div class="dropdown profile-element">
               <span>
-                <img alt="image" class="img-circle profile-image" src="{{state$profileImage}}" />
+                <img alt="image" class="img-circle profile-image" src="{{profilePicture currentUser._id}}" />
                </span>
               <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                 <span class="clear">
