Revel menu items master list

--- a/client/stylesheets/components/sales-prediction.less
+++ b/client/stylesheets/components/sales-prediction.less
@@ -21,3 +21,14 @@
     }
   }
 }
+
+//settings link functionality
+.revel-menu-link-component {
+  padding: 10px 0;
+
+  .revel-link-menu-item-component {
+    padding: 5px 0;
+    .revel-name-input {
+    }
+  }
+}
