--- a/client/lib/components/sales_prediction/revel_menu_link/revel_link_menu_item/view.html
+++ b/client/lib/components/sales_prediction/revel_menu_link/revel_link_menu_item/view.html
@@ -1,3 +1,13 @@
 <template name="revelLinkMenuItem">
-  test 2
+  <div class="row revel-link-menu-item-component">
+    {{#with state$menuItem}}
+      <div class="col-md-6">
+        {{name}}
+      </div>
+
+      <div class="col-md-6">
+        <input type="text" class="form-control revel-name-input" value="{{revelName}}">
+      </div>
+    {{/with}}
+  </div>
 </template>
