--- a/client/lib/components/sales_prediction/revel_menu_link/view.html
+++ b/client/lib/components/sales_prediction/revel_menu_link/view.html
@@ -1,3 +1,7 @@
 <template name="revelMenuLink">
-  {{> render component='revelLinkMenuItem'}}
+  <div class="container-fluid revel-menu-link-component">
+    {{#each state$menuItems}}
+      {{> render component='revelLinkMenuItem' menuItem=this}}
+    {{/each}}
+  </div>
 </template>
