--- a/client/stylesheets/12_index.less
+++ b/client/stylesheets/12_index.less
@@ -358,26 +358,24 @@ span {
   .no-results {
     padding: 10px 0;
   }
+}
 
-  .search-result {
-    .search-user-info-content {
-      padding: 5px;
-      margin-top: 5px;
-      cursor: pointer;
-      &:hover {
-        color: #fff;
-        background-color: #1AB394;
-      }
+.search-user-info-content {
+  padding: 5px;
+  margin-top: 5px;
+  cursor: pointer;
+  &:hover {
+    color: #fff;
+    background-color: #1AB394;
+  }
 
-      .search-user-info-name {
-        margin-left: 5px;
-      }
+  .search-user-info-name {
+    margin-left: 5px;
+  }
 
-      .search-user-info-plus {
-        color: #fff;
-        margin: 9px 5px 0 0;
-      }
-    }
+  .search-user-info-plus {
+    color: #fff;
+    margin: 9px 5px 0 0;
   }
 }
 
@@ -389,6 +387,10 @@ span {
 
 .area-users {
   padding: 10px;
+}
+
+.add-user-to-area-form {
+  margin-bottom: 10px;
 }
 
 .user-profile-image-container {
