--- a/client/lib/components/navigations/top/flyouts/view.html
+++ b/client/lib/components/navigations/top/flyouts/view.html
@@ -10,7 +10,7 @@
     <!--{{> render component="generalFlyout" title="Add Location" renderComponent="createLocation"}}-->
     <!--{{> render component="generalFlyout" title="Add Area" renderComponent="createArea"}}-->
     <!--{{> render component="generalFlyout" title="Location Settings" renderComponent="locationSettings"}}-->
-    {{> render component="generalFlyout" title="Area Settings" renderComponent="areaSettings"}}
+    <!--{{> render component="generalFlyout" title="Area Settings" renderComponent="areaSettings"}}-->
 
     {{#if state$isOrganizationOwner}}
 
