--- a/client/lib/components/organizations/areas/area_settings/add_user_popup/user_permission/user_permission_item/user_permission.html
+++ b/client/lib/components/organizations/areas/area_settings/add_user_popup/user_permission/user_permission_item/user_permission.html
@@ -1,4 +1,4 @@
-<template name="userPermission">
+<template name="userPermissionItem">
   <div>
     <div class="checkbox">
       <input type="checkbox" name="{{name}}" id="perm-{{name}}" />
