--- a/client/lib/components/organizations/locations/location_settings/view.html
+++ b/client/lib/components/organizations/locations/location_settings/view.html
@@ -1,7 +1,11 @@
 <template name="locationSettings">
-  <h1 class="location-name" style="display: inline-block" data-id="{{state$location._id}}">{{state$location.name}}</h1>
-  <button class="btn btn-primary col-xs-12 open-flyout" data-id="createArea" data-location-id="{{state$location._id}}">Create Area</button>
-  <button class="btn btn-danger col-xs-12 delete-location" data-id="{{state$location._id}}">Delete Location</button>
+  {{#if state$isOrganizationOwner}}
+    <h1 class="location-name" style="display: inline-block" data-id="{{state$location._id}}">{{state$location.name}}</h1>
+    <button class="btn btn-primary col-xs-12 open-flyout" data-id="createArea" data-location-id="{{state$location._id}}">Create Area</button>
+    <button class="btn btn-danger col-xs-12 delete-location" data-id="{{state$location._id}}">Delete Location</button>
+  {{else}}
+    <h1>{{state$location.name}}</h1>
+  {{/if}}
 
   <!-- Flyout createArea -->
   <div class="theme-config flyout-container" id="createArea">
