--- a/client/stylesheets/components/sales-prediction.less
+++ b/client/stylesheets/components/sales-prediction.less
@@ -24,11 +24,12 @@
 
 //settings link functionality
 .revel-menu-link-component {
-  padding: 10px 0;
+  margin-top: 15px;
+  font-size: 16px;
 
   .revel-link-menu-item-component {
-    padding: 5px 0;
-    .revel-name-input {
+    &:hover {
+      background-color: @hover-gray-color;
     }
   }
 }
