Renamed POS tab in 'Settings'

--- a/client/views/main_views/admin/list.html
+++ b/client/views/main_views/admin/list.html
@@ -19,7 +19,7 @@
               <a href="#timeout" data-toggle="tab">Timeout</a>
             </li>
             <li class="">
-              <a href="#revel-link" data-toggle="tab">Revel Menu Link</a>
+              <a href="#revel-link" data-toggle="tab">POS/ Menu Linking</a>
             </li>
           </ul>
           <div class="tab-content">
