--- a/client/lib/components/navigations/top/view.html
+++ b/client/lib/components/navigations/top/view.html
@@ -10,6 +10,8 @@
             <span class="open-flyout welcome-message" data-id="organizationStructure">
               {{state$currentArea}}
             </span>
+          </li>
+          <li>
             <a class="count-info open-flyout" data-id="organizationStructure"><i class="fa fa-sitemap"></i></a>
           </li>
         {{else}}
@@ -52,7 +54,7 @@
             <a href="#" class="theme-config-close-btn" data-id="profileFlyoutLinks">
               <i class="fa fa-angle-right"></i>
             </a>
-            {{state$username}}
+            {{username}}
           </div>
           <div class="ibox float-e-margins" style="margin-bottom: 0;">
             <div class="ibox-content" style="padding-bottom: 10px;">
