--- a/client/lib/components/organizations/areas/area_settings/add_user_popup/view.html
+++ b/client/lib/components/organizations/areas/area_settings/add_user_popup/view.html
@@ -21,7 +21,7 @@
           {{> render component='searchMasterList' searchText=state$searchText areaId=state$areaId}}
         {{/if}}
       {{else}}
-        {{> render component='userPermissions' selectedUser=state$selectedUser}}
+        {{> render component='userPermissions' selectedUser=state$selectedUser areaId=state$areaId selectPermissions=state$selectPermissions}}
       {{/if}}
     </div>
   </div>
