fixed like notification duplicate

--- a/client/lib/components/newsfeed/item/view.html
+++ b/client/lib/components/newsfeed/item/view.html
@@ -8,7 +8,7 @@
         <a href="#">{{username state$newsfeedPost.createdBy}}</a>
         <a href="#" class="small thumbsup-like pull-left like-post">
           <i class="fa fa-thumbs-up"></i> 
-          {{state$likesCount}} Like this!
+          {{#if state$liked}} You and {{else}} {{/if}} {{state$likesCount}} Like this!
         </a>
         <small class="text-muted pull-left">&nbsp;  - &nbsp;{{timeFormattedWithDate state$newsfeedPost.createdOn}}</small>
       </div>
