--- a/client/lib/components/newsfeed/sub_item/view.html
+++ b/client/lib/components/newsfeed/sub_item/view.html
@@ -5,11 +5,11 @@
     </a>
     <div class="media-body" data-id="{{state$subNewsFeedPost._id}}" id="{{state$subNewsFeedPost.createdBy}}">
       <span>
-        <a href="#" class="pull-left">{{username state$userId}} &nbsp;&nbsp;</a>  {{{state$subNewsFeedPost.text}}}
+        <a href="#" class="pull-left">{{username state$subNewsFeedPost.createdBy}} &nbsp;&nbsp;</a>  {{{state$subNewsFeedPost.text}}}
       </span>
       <a href="#" class="small like-post">
         <i class="fa fa-thumbs-up"></i> 
-        {{state$likesCount}} Like this!
+        {{#if state$liked}} You and {{else}} {{/if}} {{state$likesCount}} Like this!
       </a> -
       <small class="text-muted">{{timeFormattedWithDate state$subNewsFeedPost.createdOn}}</small>
     </div>
