fix text editor rerendering bug

--- a/client/lib/components/navigations/heading/view.html
+++ b/client/lib/components/navigations/heading/view.html
@@ -233,8 +233,7 @@
             </a>
           {{else}}
             <div class="btn-group">
-              <button type="button" class="btn btn-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                      aria-expanded="false">
+              <button type="button" class="btn btn-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fa fa-cog"></i>
                 Settings
                 <span class="caret"></span>
@@ -251,11 +250,9 @@
                 {{/if}}
                 <li>
                   {{#if state$isJobListSubscribed}}
-                    <a href="#" class="btn btn-white unSubscribeJobsList"><i class="fa fa-lg fa-rss text-info"></i>
-                      Unsubscribe</a>
+                    <a href="#" class="unSubscribeJobsList"><i class="fa fa-lg fa-rss text-info"></i> Unsubscribe</a>
                   {{else}}
-                    <a href="#" class="btn btn-white subscribeJobsList"><i class="fa fa-lg fa-rss text-muted"></i>
-                      Subscribe</a>
+                    <a href="#" class="subscribeJobsList"><i class="fa fa-lg fa-rss text-muted"></i> Subscribe</a>
                   {{/if}}
                 </li>
               </ul>
