--- a/client/lib/components/jobItems/detail/view.html
+++ b/client/lib/components/jobItems/detail/view.html
@@ -148,18 +148,10 @@
                         <table class="table">
                           <thead>
                             <tr>
-                              <th>
-                                Name
-                              </th>
-                              <th>
-                                Category
-                              </th>
-                              <th>
-                                Sale Price
-                              </th>
-                              <th>
-                                Status
-                              </th>
+                              <th>Name</th>
+                              <th>Category</th>
+                              <th>Sale Price</th>
+                              <th>Status</th>
                             </tr>
                           </thead>
                           {{# each state$relatedMenus}}
@@ -170,15 +162,9 @@
                                     {{name}}
                                   </a>
                                 </td>
-                                <td>
-                                  {{state$getCategory category}}
-                                </td>
-                                <td>
-                                  {{salesPrice}}
-                                </td>
-                                <td>
-                                  {{status}}
-                                </td>
+                                <td>{{state$getCategory category}}</td>
+                                <td>{{salesPrice}}</td>
+                                <td>{{status}}</td>
                               </tr>
                             </tbody>
                           {{/ each}}
