--- a/client/lib/components/jobItems/ingredients_list/view.html
+++ b/client/lib/components/jobItems/ingredients_list/view.html
@@ -16,7 +16,14 @@
         {{/each}}
       </tbody>
       <br>
-      <button id="showIngredientsList"  class="btn btn-block btn-outline btn-primary" type="button"><i class="fa fa-plus"></i> Add ingredients to prep item</button>
+      <button id="showIngredientsList"  class="btn btn-block btn-outline btn-primary" type="button">
+        <i class="fa fa-plus"></i>
+        {{#if state$isMenu}}
+          Add ingredients to menu item
+        {{else}}
+          Add ingredients to prep item
+        {{/if}}
+      </button>
     </table>
   </div>
 </template>
