--- a/client/lib/components/menuitems/submit/view.html
+++ b/client/lib/components/menuitems/submit/view.html
@@ -56,29 +56,12 @@
         </table>
       </div>
     </div>
+    
     <div class="form-group">
       <label class="col-sm-2 control-label">Ingredients used</label>
-      <div class="col-sm-10">
-        <table class="table table-hover thumbnail">
-          <thead>
-            <tr>
-              <th>Supplier's Code</th>
-              <th>Description</th>
-              <th>Unit used</th>
-              <th>Unit Price ($)</th>
-              <th>Quantity</th>
-            </tr>
-          </thead>
-          <tbody>
-            {{#each ingredientsList}}
-              {{> render component='ingredientItemEdit' ingredient=this}}
-            {{/each}}
-          </tbody>
-          <br>
-          <button id="showIngredientsList"  class="btn btn-block btn-outline btn-primary" type="button"><i class="fa fa-plus"></i> Add ingredient to menu item</button>
-        </table>
-      </div>
+      {{> render component="listOfIngredients" id="menuSubmit" name="menuSubmit"}}
     </div>
+
     <div class="form-group">
       <label class="col-sm-2 control-label">Sale price</label>
       <div class="col-sm-10">
