--- a/client/lib/components/organizations/areas/area_settings/add_user_popup/invite_new_user/view.html
+++ b/client/lib/components/organizations/areas/area_settings/add_user_popup/invite_new_user/view.html
@@ -1,10 +1,7 @@
 <template name="inviteNewUser">
-  <div class="input-group col-xs-12">
-    <input type="text" class="form-control" placeholder="Name" name="newUserName">
-    <span class="input-group-btn">
-      <button class="btn btn-primary" type="submit">
-        <i class="fa fa-check"></i>
-      </button>
-    </span>
-  </div>
+  <input type="text" class="form-control" placeholder="Name" name="newUserName">
+  {{> render component='userRolesSelect'}}
+  <button class="btn btn-primary col-xs-12" type="submit">
+    <i class="fa fa-check"></i>
+  </button>
 </template>
