--- a/client/lib/components/menuitems/detail/view.html
+++ b/client/lib/components/menuitems/detail/view.html
@@ -13,7 +13,7 @@
                 <h3 class="panel-title">Settings</h3>
               </div>
               <div class="panel-body">
-                {{> render component="editMenuItem"}}
+                {{> render component="settingsMenuItem"}}
               </div>
             </div>
           </div>
