--- a/client/lib/components/menuitems/settings/view.html
+++ b/client/lib/components/menuitems/settings/view.html
@@ -1,5 +1,6 @@
-<template name="editMenuItem">
+<template name="settingsMenuItem">
   <form method="get" class="form-horizontal" data-id="{{state$menu._id}}"> 
+  
     <div class="form-group">
       <label class="col-sm-2 control-label">Category</label>
       <div class="col-sm-9 pull-right">
@@ -15,6 +16,7 @@
         </select>
       </div>
     </div>
+
     <div class="form-group">
       <label class="col-sm-2 control-label">Status</label>
       <div class="col-sm-9 pull-right">
@@ -34,32 +36,37 @@
         {{/if}}
       </div>
     </div>
+
     <div class="form-group">
       <label class="col-sm-2 control-label">Image</label>
       <div class="col-sm-9 pull-right">
-        <button type="button" class="btn btn-sm btn-info" id="uploadMenuItem">Upload Image</button><br>
-        <div>
+        <div class="menuImageDiv">
           {{#if state$menu.image}}
-          <div class="file uploadedImageDiv">
-            <a href="#">
-              <span class="corner"></span>
-              <div class="image">
-                <img id="uploadedImageUrl" src="{{state$menu.image}}" class="img-responsive menu-item-image">
+            <div class="file uploadedImageDiv">
+              <div class="box-wrapper pull-right" style="display: none; position: absolute;">
+                <button type="button" class="btn btn-sm btn-info" id="uploadMenuItem"><i class="fa fa-edit m-r-sm"></i>Edit Image</button><br>
               </div>
-            </a>
-          </div>
+              <a href="#">
+                <span class="corner"></span>
+                <div class="image">
+                  <img id="uploadedImageUrl" src="{{state$menu.image}}" class="img-responsive menu-item-image">
+                </div>
+              </a>
+            </div>
           {{else}}
+            <button type="button" class="btn btn-sm btn-info" id="uploadMenuItem">Upload Image</button><br>
             <div class="file uploadedNewImageDiv hide">
-            <a href="#">
-              <span class="corner"></span>
-              <div class="image">
-                <img id="uploadedImageUrl" src="" class="img-responsive menu-item-image">
-              </div>
-            </a>
-          </div>
+              <a href="#">
+                <span class="corner"></span>
+                <div class="image">
+                  <img id="uploadedImageUrl" src="" class="img-responsive menu-item-image">
+                </div>
+              </a>
+            </div>
           {{/if}}
         </div>
       </div>
     </div>
+
   </form>
 </template>
