--- a/client/lib/components/jobItems/items/edit/view.html
+++ b/client/lib/components/jobItems/items/edit/view.html
@@ -1,7 +1,7 @@
 <template name="jobItemEdit">
   <tr>
     <td>{{state$item.name}}</td>
-    <td>{{state$item.type}}</td>
+    <td>{{jobTypeById state$item.type}}</td>
     <td>$ {{state$item.prepCostPerPortion}}</td>
     <td><input type="text" name="prep_qty" class="prepQty" data-id="{{state$item._id}}" value="{{state$quantity}}"/></td>
     <td>
