--- a/client/lib/components/jobItems/modal_list/item/view.html
+++ b/client/lib/components/jobItems/modal_list/item/view.html
@@ -1,12 +1,14 @@
 <template name="jobItemListed">
   <tr>
-    <td><a href="" data-toggle="modal" class="editIngredient">{{{state$item.name}}}</a></td>
+    <td>
+      <a href="" target="_blank" data-toggle="modal">{{{state$item.name}}}</a>
+    </td>
     <td>{{secondsToMinutes state$item.activeTime}}</td>
     <td>$ {{state$costPerPortion}}</td>
     <td>
       <div class="i-checks">
         <label>
-          <input type="checkbox" value="" data-id="{{state$item._id}}" data-type="{{state$item.type}}" class="selectedPrep" name="selectedPrep">
+          <input type="checkbox" value="" data-id="{{state$item._id}}" data-type="{{state$item.type}}" class="selectedPrep">
         </label>
       </div>
     </td>
